# serenity-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: _build.yml  build.yml  deploy.yml  pr.yml
install/: README.md  update_bot_name.py
secrets/: README.md
src/: main.rs
src/secrets/: mod.rs
src/utils/: constants.rs  gcp.rs  logging.rs  mod.rs
