[package]
name = "enter_bot_name_here"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
google_cloud_logging = "0.1.0"
log = { version = "0.4.20", features = ["release_max_level_info", "std"] }
serde_json = "1.0.108"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
